# hakai-ctd-issues

./: .gitignore  404.html  README.md  index.html  mkdocs.yaml  pyproject.toml  sample.env  sitemap.xml
.github/workflows/: build-site.yaml
assets/: extra.css
docs/: index.md
docs/hakai/: index.md
docs/nature_trust/: index.md
docs/sfc/: index.md
docs/uwt/: index.md
hakai/: index.html
hakai_ctd_issues/: __main__.py
hakai_ctd_issues/templates/: issue_summary.html  issue_summary.md.jinja
nature_trust/: index.html
search/: search_index.json
sfc/: index.html
uwt/: index.html
