[tool.poetry]
name = "hakai-ctd-issues"
version = "0.1.0"
description = ""
authors = ["Jessy Barrette <30420025+JessyBarrette@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hakai_ctd_issues"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
hakai-api = "^1.5.1"
pandas = "^2.1.2"
PyGithub = "^2.1.1"
tabulate = "^0.9.0"
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
